recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:9: error: type mismatch;
 found   : Array[Int]
 required: List[Int]
return rep
       ^